--- a/contato.html
+++ b/contato.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Armando - Layout Site Contato</title>
-    <link rel="stylesheet" href="custom.css">
-  </head>
-  <body>
-<h1>Contato</h1>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" >
+        <title>Armando - Layout Site Contato</title>
+    </head>
+
+    <body>
+        <nav class="navbar">
+            <div class="max-width">
+                <div class="logo"><a href="index.html">Armando</a></div>
+                <ul class="menu">
+                    <li><a href="index.html" class="menu-btn">Home</a></li>
+                    <li><a href="sobre-empresa.html" class="menu-btn">Sobre Empresa</a></li>
+                    <li><a href="contato.html" class="menu-btn">Contato</a></li>
+                </ul>
+                <div class="menu-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
+        </nav>
+        <h1>Contato</h1>
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/custom.js"></script>
+    </body>
 </html>
